Revert "Fix Layout Bug"
This reverts commit ad1cf4f0101d2af540bf533e295171ff82a5f1ad.

--- a/HNFCRM_Chat/Content/HNFStyle.css
+++ b/HNFCRM_Chat/Content/HNFStyle.css
@@ -85,6 +85,7 @@ a:link {
     font-size: 0.7em;
     text-decoration: none;
     align-items: center;
+
 }
 .sidebar-nav li a:hover {
     color: orange;
@@ -93,9 +94,10 @@ a:link {
 .sidebar-nav li.sidebar-active a {
     background-color: #ff922e;
     color: white;
+
 }
 .sidebar-nav ul.navbar-nav li a {
-    color: white;
+    color: black;
 }
 /* Topbar property*/
 .navbar-nav li a{
